fixed contact email and phone number on iphone 5 se

--- a/src/App.css
+++ b/src/App.css
@@ -147,6 +147,19 @@ background: linear-gradient(to right, #FFFFFF, #ECE9E6);
   justify-content: center;
   padding-top:2em;
 }
+@media only screen and (max-height: 570px){
+  .contact-div{
+    position: unset;
+  }
+  #phspan{
+    font-size: 25px !important;
+  }
+  #emailspan{
+    font-size: 25px !important;
+    margin-right: 6px;
+  }
+}
+
 
 .contact-grid{
   text-align: center;
@@ -196,6 +209,7 @@ background: linear-gradient(to right, #FFFFFF, #ECE9E6);
   span{
     font-size: 23px
   }
+
   .mdl-list__item{
     padding: 5px !important
   }
